syntax = "proto3";
package contracts;

option csharp_namespace = "Microsoft.LocalForwarder.Library.Inputs.Contracts";

import "include/google/protobuf/wrappers.proto";

import "Event.proto";
import "Message.proto";
import "Metric.proto";
import "Exception.proto";
import "Dependency.proto";
import "Availability.proto";
import "PageView.proto";
import "Request.proto";

message Telemetry {
	int32 ver = 1;
    
    string dataTypeName = 2;
    
    //[Description("Event date time when telemetry item was created. This is the wall clock time on the client when the event was generated. There is no guarantee that the client's time is accurate. This field must be formatted in UTC ISO 8601 format, with a trailing 'Z' character, as described publicly on https://en.wikipedia.org/wiki/ISO_8601#UTC. Note: the number of decimal seconds digits provided are variable (and unspecified). Consumers should handle this, i.e. managed code consumers should not use format 'O' for parsing as it specifies a fixed length. Example: 2009-06-15T13:45:30.0000000Z.")]
    //[Name("DateTime")]
    //[CSType("DateTimeOffset")]
    string dateTime = 3;
    
    //default must be assumed 100
    google.protobuf.DoubleValue samplingRate = 4;
    
    string sequenceNumber = 5;
    
    string instrumentationKey = 6;
    
    map<string, string> tags = 7;
    
    oneof data {
		Event event = 8;
		Message message = 9;
		Metric metric = 10;
		Exception exception = 11;
		Dependency dependency = 12;
		Availability availability = 13;
		PageView pageView = 14;
		Request request = 15;
	}
}